--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -69,9 +69,9 @@
 	color: var(--primary-color);
 }
 
-.homepage-after-title {
+/* .homepage-after-title {
 	display: flex;
-}
+} */
 
 .homepage-projects {
 	flex-basis: 300px;
@@ -79,6 +79,7 @@
 }
 
 .homepage-articles {
+	display: flex;
 	flex-basis: 900px;
 	padding-top: 30px;
 	margin-left: -30px;
